# seagull

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy-main.c  main.c
include/: database.h  io.h  types.h  utils.h
include/data/: message.h
include/io/: io.h  log.h
include/nesquik/: list.h
include/parse/: parse.h  parse.ph  parse2.h
sql/: seed.sql
src/: database.c  io.c
src/data/: lists.c  message.c
src/database/: database.c
src/io/: io.c  log.c
src/parse/: parse.c  parse2.c
